2001-04-23  Bart Schaefer  <schaefer@zsh.org>

	* 14070: Src/lex.c, Src/params.c, Test/D06subscript.ztst: Fix
	problem with parsing \" in subscripts during parameter expansion
	in double-quotes.

2001-04-22  Bart Schaefer  <schaefer@zsh.org>

	* 14066: Doc/Zsh/expn.yo, Doc/Zsh/params.yo, Src/params.c,
	Test/D06subscript.ztst: Document subscript usage; fix minor bug in
	(kK) subscript flags, and add a test for it.

2001-04-22  Clint Adams  <schizo@debian.org>

	* 14065: Src/params.c, Src/Modules/termcap.c,
	Src/Modules/terminfo.c: handle numeric capabilities
	properly within the termcap/terminfo parameters.

2001-04-21  Bart Schaefer  <schaefer@zsh.org>

	* 14062: Src/Modules/termcap.c: Avoid including both old-style
	termcap.h and ncurses term.h at the same time (see 13965).

	* 14060: Src/builtin.c, Src/lex.c, Src/params.c,
	Test/D06subscript.ztst: Fix problem with ${array[ix]=value}
	introduced by 14008; fix long-standing problems with
	`noglob typeset array[ix]=value' and `typeset 12foo=bar';
	fix parsing problem with ((\[ ...)) introduced by 14051.

2001-04-20  Clint Adams  <schizo@debian.org>

	* 14055: Src/Modules/termcap.c: include termio.h if available.
	This prevents Solaris 8 from choking on term.h.

	* 14053: Src/Modules/termcap.c, Src/Modules/termcap.mdd:
	add ${termcap} special parameter in the style of ${terminfo}.

2001-04-19  Bart Schaefer  <schaefer@zsh.org>

	* 14008, 14051: Src/lex.c, Src/math.c, Src/params.c,
	Test/D06subscript.ztst: Improve parsing of subscripts so that
	many forms that failed before, work now, particularly for assoc
	array keys; create a test suite.

	* 14008: Src/hist.c: Don't getsparam("HISTFILE") until it is
	actually needed, because other parameter expansions reset the
	history mechanism for subscript parsing.

	* 14008: Src/builtin.c: Keep track of the new Param created when
	typeset_single() calls setsparam() in some circumstances; drop a
	redundant isident() test.
