@@ -5,5 +5,3 @@ load=no
 autobins="cap getcap setcap"
 
 objects="cap.o"
-
-extralibs="cap"
