@@ -16,5 +16,3 @@ autobins="echoti"
 autoparams="terminfo"
 
 objects="terminfo.o"
-
-extralibs="terminfo"
