@@ -504,7 +504,7 @@ dnl On ReliantUNIX -lc better be the last library, else funny things
 dnl may happen.
 AC_CHECK_LIB(c, printf, [LIBS="$LIBS -lc"])
 
-AC_CHECK_LIB(m, pow, [LIBS_M="-lm"])
+AC_CHECK_LIB(m, pow)
 
 dnl Prefer BSD termcap library to SysV curses library, except on certain
 dnl SYSV-derived systems.
@@ -514,12 +514,7 @@ case "$host_os" in
   *)             termcap_curses_order="termcap curses ncurses" ;;
 esac
 
-zsh_SEARCH_LIBS(tgetent, [$termcap_curses_order])
-LIBS_TERMCAP=$ZS_LIBS
-
-zsh_SEARCH_LIBS(tigetstr, [$termcap_curses_order])
-LIBS_TERMINFO=$ZS_LIBS
-
+AC_SEARCH_LIBS(tgetent, [$termcap_curses_order])
 AC_MSG_CHECKING(if boolcodes is available)
 AC_TRY_COMPILE([#include <curses.h>
 #include <term.h>], [char **test = boolcodes;],
@@ -554,8 +549,7 @@ AC_MSG_RESULT($strnames)
 dnl Some systems (Solaris 2.x, Linux Redhat 5.x) require
 dnl libnsl (Network Services Library) to find yp_all
 
-zsh_SEARCH_LIBS(yp_all, nsl)
-LIBS_YP=$ZS_LIBS
+AC_SEARCH_LIBS(yp_all, nsl)
 
 dnl I am told that told that unicos reqire these for nis_list
 if test `echo $host_os | sed 's/^\(unicos\).*/\1/'` = unicos; then
@@ -566,11 +560,9 @@ if test "x$dynamic" = xyes; then
   AC_CHECK_LIB(dl, dlopen)
 fi
 
-AC_CHECK_LIB(cap, cap_get_proc, [LIBS_CAP="-lcap"
-AC_DEFINE(HAVE_LIBCAP)])
+AC_CHECK_LIB(cap, cap_get_proc)
 
-AC_CHECK_LIB(socket, socket, [LIBS_SOCKET="-lsocket"
-AC_DEFINE(HAVE_LIBSOCKET)])
+AC_CHECK_LIB(socket, socket)
 
 dnl ---------------------
 dnl CHECK TERMCAP LIBRARY
@@ -839,9 +831,6 @@ dnl ---------------
 dnl need to integrate this function
 dnl AC_FUNC_STRFTIME
 
-SAVELIBS=$LIBS
-LIBS="$LIBS_CAP $LIBS_YP $LIBS_M $LIBS_TERMCAP $LIBS_TERMINFO $LIBS"
-
 AC_CHECK_FUNCS(strftime difftime gettimeofday \
 	       select poll \
 	       readlink lstat lchown faccessx fchdir ftruncate \
@@ -897,9 +886,6 @@ main()
 if test $zsh_cv_func_tgetent_accepts_null = yes; then
   AC_DEFINE(TGETENT_ACCEPTS_NULL)
 fi
-
-MAINLIBS="$LIBS_CAP $LIBS_SOCKET $LIBS_M $LIBS_TERMCAP $LIBS_TERMINFO $LIBS_YP $SAVELIBS"
-LIBS=$SAVELIBS
 
 AC_FUNC_MMAP
 if test x$ac_cv_func_mmap_fixed_mapped = xyes; then
@@ -1689,16 +1675,10 @@ if test "x$dynamic" = xyes; then
   test "$zsh_cv_shared_environ" = yes || dynamic=no
 dnl  test "$zsh_cv_sys_dynamic_broken" = no || dynamic=no
   if test "$ac_cv_func_tgetent" = yes; then
-    SAVELIBS=$LIBS
-    LIBS="$LIBS_TERMCAP $LIBS"
     zsh_SHARED_FUNCTION([tgetent])
-    LIBS=$SAVELIBS
   fi
   if test "$ac_cv_func_tigetstr" = yes; then
-    SAVELIBS=$LIBS
-    LIBS="$LIBS_TERMINFO $LIBS"
     zsh_SHARED_FUNCTION([tigetstr])
-    LIBS=$SAVELIBS
   fi
 fi
 
@@ -1772,13 +1752,6 @@ AC_SUBST(MOD_EXPORT)dnl
 AC_SUBST(MOD_IMPORT_VARIABLE)dnl
 AC_SUBST(MOD_IMPORT_FUNCTION)dnl
 AC_SUBST(EXTRAZSHOBJS)dnl
-AC_SUBST(MAINLIBS)dnl
-AC_SUBST(LIBS_M)dnl
-AC_SUBST(LIBS_CAP)dnl
-AC_SUBST(LIBS_SOCKET)dnl
-AC_SUBST(LIBS_TERMCAP)dnl
-AC_SUBST(LIBS_TERMINFO)dnl
-AC_SUBST(LIBS_YP)dnl
 
 # Generate config.modules.  We look for *.mdd files in first and second
 # level subdirectories.  Any existing line not containing 'auto=y' will be
@@ -1929,8 +1902,7 @@ if test "$dynamic" = yes; then
 module linker flags       : ${LDFLAGS} ${LIBLDFLAGS} ${DLLDFLAGS}"
 fi
 echo "\
-main library flags        : ${MAINLIBS}
-base library flags        : ${LIBS}
+library flags             : ${LIBS}
 installation basename     : ${tzsh_name}
 binary install path       : ${zshbin2}
 man page install path     : ${zshman}
